corrected admin and member dashboard
